--- a/python/flask/youtube/static/style.css
+++ b/python/flask/youtube/static/style.css
@@ -1,5 +1,5 @@
 div{
-    width: 500px;
+    width: 50%;
     background-color: lightblue;
     padding: 10px;
     margin: auto;
@@ -8,4 +8,5 @@ div{
 
 h1{
     text-align: center;
+    margin-bottom: 15px;
 }
