--- a/python/flask/youtube/templates/index.html
+++ b/python/flask/youtube/templates/index.html
@@ -15,6 +15,7 @@
             {{ form.url.label(class="form-label") }}
             {{ form.url(class="form-control") }} <br>
 
+            {{ form.select.label(class="form-label") }}
             {{ form.select(class="form-select") }} <br>
 
             {{ form.submit(class="btn btn-primary") }}
